--- a/Blazor/BlazorBase/Shared/NavMenu.razor
+++ b/Blazor/BlazorBase/Shared/NavMenu.razor
@@ -1,4 +1,7 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿@using BlazorBase.Data
+@inject MenuService MenuService
+
+<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">BlazorBase</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -7,21 +10,38 @@
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
+        @*<li class="nav-item px-3">
+                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span> Home
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="counter">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                </NavLink>
+            </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="fetchdata">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                </NavLink>
+            </li>*@
+
+        @foreach (var menu in menus)
+        {
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+            @if(string.IsNullOrEmpty(menu.MatchTagret)){
+            <NavLink class="nav-link" href="@menu.MenuHref" >
+                <span class="" aria-hidden="true"></span> @menu.MenuText
             </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            }else{
+            <NavLink class="nav-link" href="@menu.MenuHref" Match="NavLinkMatch.All">
+                <span class="" aria-hidden="true"></span> @menu.MenuText
             </NavLink>
+            }
+
         </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
+        }
+
     </ul>
 </div>
 
@@ -33,5 +53,12 @@
     void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    List<MenuItem> menus;
+
+    protected override async Task OnInitializedAsync()
+    {
+        menus = await MenuService.GetMenusAsync();
     }
 }
